[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
skip_glob = [
    ".env/*",
    ".venv/*",
    ".git/*",
    ".tox/*",
    ".pytest_cache/*",
    ".mypy_cache/*",
    ".nox/*",
    ".eggs/*",
    "*.egg-info/*",
    ".vscode/*",
    ".github/*"
]

[tool.black]
line-length = 88 # default is 88
target-version = ['py38', 'py39', 'py310']

[tool.pytest.ini_options]
pythonpath = ["."]
